Fix display issue on iPhone where password field and toggle were overlapping other fields

--- a/css/frontend/variation_high_contrast.css
+++ b/css/frontend/variation_high_contrast.css
@@ -958,6 +958,10 @@
 			width: auto;
 		}
 
+		#pmpro_user_fields .pmpro_form_field-password:has(.pmpro_form_field-password-toggle) {
+			width: 100%;
+		}
+
 	}
 
 }
